# kondo

./: .gitignore  Cargo.toml  LICENSE
migrations/: 20250329173018_init-db.sql  20250403102003_new-task-columns.sql
src/: config.rs  content_parser.rs  database.rs  kondo.rs  list_ui.rs  main.rs
